--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <div class="character">
                 <img src="Zoey Vandall.webp" alt="Zoey Vandall">
                 <h2>Zoey Vandall</h2>
-                <a href="https://vgames1.github.io/Zoey/" target="_blank" class="playButton">Play</a>
+                <a href="https://vgames1.github.io/zoey" target="_blank" class="playButton">Play</a>
             </div>
             <div class="character">
                 <img src="Gina Caldwell.webp" alt="Gina Caldwell">
                 <h2>Gina Caldwell</h2>
-                <a href="https://vgames1.github.io/Gina/" target="_blank" class="playButton">Play</a>
+                <a href="https://vgames1.github.io/zoey" target="_blank" class="playButton">Play</a>
             </div>
         </div>
     </div>
