--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Pedro's Game - VGAMES">
+<meta property="og:description" content="Play as Pedro in this exciting VGAMES adventure!">
+<meta property="og:image" content="https://vgames1.github.io/vgamesblack">
+<meta property="og:url" content="https://vgames1.github.io">
+<meta property="og:type" content="website">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VGames - Choose Your Character</title>
