--- a/gina.html
+++ b/gina.html
@@ -18,3 +18,71 @@
     </div>
 </body>
 </html>
+<style>
+  #apology-widget {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #222;
+    color: #fff;
+    padding: 15px 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    font-family: Arial, sans-serif;
+    text-align: center;
+    max-width: 90%;
+    width: 400px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s ease-in-out;
+  }
+
+  #apology-widget.show {
+    opacity: 1;
+    visibility: visible;
+    bottom: 40px;
+  }
+
+  #apology-widget img {
+    width: 60px;
+    height: auto;
+    margin-bottom: 10px;
+  }
+
+  #apology-widget button {
+    background: red;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    margin-top: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  #apology-widget button:hover {
+    background: darkred;
+  }
+</style>
+
+<div id="apology-widget">
+  <img src="vgamesblack.png" alt="VGAMES Logo">
+  <p><strong>Apology for Delay – Gina’s Story Update</strong></p>
+  <p>We planned to release **Gina’s Story** on February 20, but due to setbacks, it will now be available on <strong>March 10</strong>. Thank you for your patience! 💜</p>
+  <button onclick="closeApologyWidget()">Got it!</button>
+</div>
+
+<script>
+  function showApologyWidget() {
+    setTimeout(() => {
+      document.getElementById("apology-widget").classList.add("show");
+    }, 1000); // Show after 1 second
+  }
+
+  function closeApologyWidget() {
+    document.getElementById("apology-widget").classList.remove("show");
+  }
+
+  window.onload = showApologyWidget;
+</script>
