--- a/404.html
+++ b/404.html
@@ -224,3 +224,74 @@
     </script>
 </body>
 </html>
+
+<div class="widget" id="widget">
+    <img src="https://vgames1.github.io/vgameswhite.png" alt="VGAMES Logo" id="widgetLogo">
+    <div class="message">
+        Download the current app at <a href="https://vgames1.github.io/apps" style="color: #007BFF; text-decoration: none;">vgames1.github.io/apps</a> for a better and offline experience!
+    </div>
+    <button class="close-btn" onclick="removeWidget()">×</button>
+</div>
+
+<style>
+    .widget {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #121212;
+        color: white;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+    }
+    .widget img {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+        transition: opacity 0.5s;
+    }
+    .widget .message {
+        flex-grow: 1;
+        text-align: left;
+    }
+    .widget .close-btn {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 24px;
+        cursor: pointer;
+    }
+    @keyframes shatter {
+        0% { transform: scale(1); opacity: 1; }
+        100% { transform: scale(0); opacity: 0; }
+    }
+    .shatter {
+        animation: shatter 0.5s ease-out forwards;
+    }
+</style>
+
+<script>
+    // Switch Logo Every Second
+    const widgetLogo = document.getElementById("widgetLogo");
+    let isWhiteLogo = true;
+
+    setInterval(() => {
+        isWhiteLogo = !isWhiteLogo;
+        widgetLogo.src = isWhiteLogo
+            ? "https://vgames1.github.io/vgameswhite.png"
+            : "https://vgames1.github.io/vgamesblack.png";
+    }, 1000);
+
+    // Remove Widget with Shatter Animation
+    function removeWidget() {
+        const widget = document.getElementById("widget");
+        widget.classList.add("shatter");
+        setTimeout(() => {
+            widget.remove();
+        }, 500); // Match the duration of the animation
+    }
+</script>
