--- a/apps.html
+++ b/apps.html
@@ -156,7 +156,7 @@
             <p>Tic Tac Toe is a two-player game played on a 3x3 grid. Players take turns marking a space in the grid, one using <strong>X</strong> and the other using <strong>O</strong>. The goal is to be the first to get three of your marks in a row (horizontally, vertically, or diagonally).</p>
             <h4>Example of a Winning Scenario:</h4>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/200px-Tic_tac_toe.svg.png" alt="Tic Tac Toe Winning Example">
-            <p>In the example above, <strong>X</strong> has won by placing three marks diagonally.</p>
+            <p>In the example above, <strong>OX</strong> has won by placing three marks diagonally.</p>
             <h4>Steps to Play:</h4>
             <ol>
                 <li>Player 1 (X) and Player 2 (O) take turns.</li>
